--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 :root {
   --background-color: #000000;
   --primary-color: #faf094;
-  --secondary-color: #ec7a1c;
-  --pimary-text-color: #e0e0e0;
+  --secondary-color: #bd5c0d;
+  --pimary-text-color: #d8d8d8;
   --line-color: #2d2d2d;
 }
 
@@ -58,7 +58,7 @@ a:hover {
   align-items: center;
   font-size: 2em;
   color: var(--pimary-text-color);
-  color: var(--line-color);
+  /* color: var(--line-color); */
   transform: rotate(-10deg);
   flex-grow: 1;
 }
@@ -126,6 +126,7 @@ a:hover {
   color: var(--pimary-text-color);
   display: flex;
   flex-wrap: wrap;
+  min-height: 40vh;
 }
 .main-dates {
   padding: 1em 3em;
@@ -154,9 +155,9 @@ a:hover {
 .details {
   padding: 1em 3em;
   flex-grow: 1;
-  flex: 1, 1 50%;
+  flex: 1, 1, 40%;
   text-align: center;
-  /* max-width: 800px; */
+  max-width: 800px;
 }
 
 .scale-item {
@@ -169,7 +170,7 @@ a:hover {
 }
 
 .scale-line--html {
-  width: 88%;
+  width: 80%;
   height: 15px;
   border-radius: 0.4em;
   background-color: var(--pimary-text-color);
@@ -182,14 +183,14 @@ a:hover {
   height: 15px;
   border-top-left-radius: 0.4em;
   border-bottom-left-radius: 0.4em;
-  background-color: var(--line-color);
-  border-right: 2px solid var(--secondary-color);
+  background-color: var(--secondary-color);
+  /* border-right: 2px solid var(--secondary-color); */
   top: 0;
   left: 0;
   z-index: 1;
 }
 .scale-line--css {
-  width: 88%;
+  width: 80%;
   height: 15px;
   border-radius: 0.4em;
   background-color: var(--pimary-text-color);
@@ -202,13 +203,13 @@ a:hover {
   height: 15px;
   border-top-left-radius: 0.4em;
   border-bottom-left-radius: 0.4em;
-  background-color: var(--line-color);
-  border-right: 2px solid var(--secondary-color);
+  background-color: var(--secondary-color);
+  /* border-right: 2px solid var(--secondary-color); */
   top: 0;
   left: 0;
 }
 .scale-line--js {
-  width: 88%;
+  width: 80%;
   height: 15px;
   border-radius: 0.4em;
   background-color: var(--pimary-text-color);
@@ -221,15 +222,55 @@ a:hover {
   height: 15px;
   border-top-left-radius: 0.4em;
   border-bottom-left-radius: 0.4em;
-  background-color: var(--line-color);
-  border-right: 2px solid var(--secondary-color);
+  background-color: var(--secondary-color);
+  /* border-right: 2px solid var(--secondary-color); */
   top: 0;
   left: 0;
 }
 /* Footer */
 .footer {
+  color: var(--pimary-text-color);
+  text-align: right;
   padding: 1rem;
+}
+
+.skills-wrapper {
+  color: var(--pimary-text-color);
+  background-color: var(--line-color);
+  display: flex;
+  margin-top: 2rem;
+  /* flex-direction: column; */
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer p {
+  color: var(--primary-color);
+  padding: 1rem;
+}
+
+.demo {
+  /* margin-top: 1rem; */
+  /* min-height: 220px; */
+  padding: 1rem;
+  display: flex;
+}
+
+.demo h2 {
+  font-family: 'Beth Ellen', cursive;
+  letter-spacing: 5px;
+  font-size: 2rem;
+  text-align: center;
+  padding: 0.5rem;
+}
+
+.icons {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.icons img {
+  margin: 0.5rem;
+  width: 40px;
+  height: 40px;
 }
