--- a/style.css
+++ b/style.css
@@ -33,6 +33,15 @@ body {
   padding: 1em;
   margin: 0 auto;
   min-height: 90vh;
+  max-width: 1280px;
+}
+
+.info-wrapper {
+  padding: 1em 0;
+  margin-bottom: 1em;
+  display: flex;
+  /* align-items: center; */
+  flex-wrap: wrap;
 }
 
 a,
@@ -48,6 +57,15 @@ a:hover {
 
 .main-header {
   margin-bottom: 1rem;
+
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0.95)
+    ),
+    url('img/code.jpg');
+  background-repeat: cover;
+  background-size: 100% 100%;
 }
 
 .main-header .adv {
@@ -56,11 +74,14 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2em;
-  color: var(--pimary-text-color);
-  /* color: var(--line-color); */
-  transform: rotate(-10deg);
   flex-grow: 1;
+  font-size: 2em;
+}
+
+.adv h2 {
+  color: var(--pimary-text-color);
+  color: var(--line-color);
+  transform: rotate(-10deg);
 }
 
 .main-header::after {
@@ -71,14 +92,6 @@ a:hover {
   /* padding: 5px; */
   background-color: var(--primary-color);
   margin: 1rem 0;
-}
-
-.info-wrapper {
-  padding: 1em 0;
-  margin-bottom: 1em;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
 }
 
 .my-name {
@@ -143,13 +156,13 @@ a:hover {
   cursor: pointer;
 }
 
+.experience-details:not(:first-child) {
+  display: none;
+}
+
 .experience h2 {
   margin-bottom: 1.2rem;
   color: var(--pimary-text-color);
-}
-
-.experience-details {
-  display: none;
 }
 
 .details {
@@ -230,18 +243,20 @@ a:hover {
 /* Footer */
 .footer {
   color: var(--pimary-text-color);
-  text-align: right;
+  text-align: center;
   padding: 1rem;
+  /* border-top: 2px solid var(--primary-color); */
+  /* background-color: var(--line-color); */
 }
 
 .skills-wrapper {
+  /* background-color: var(--line-color); */
+  padding: 2rem 0;
   color: var(--pimary-text-color);
-  background-color: var(--line-color);
   display: flex;
-  margin-top: 2rem;
-  /* flex-direction: column; */
-  justify-content: space-around;
-  align-items: center;
+  margin: 3rem 0;
+  flex-wrap: wrap;
+  /* border: 2px solid var(--primary-color); */
 }
 
 .footer p {
@@ -250,27 +265,24 @@ a:hover {
 }
 
 .demo {
-  /* margin-top: 1rem; */
-  /* min-height: 220px; */
-  padding: 1rem;
   display: flex;
 }
 
 .demo h2 {
-  font-family: 'Beth Ellen', cursive;
+  /* font-family: 'Beth Ellen', cursive; */
   letter-spacing: 5px;
-  font-size: 2rem;
+  /* font-size: 2rem; */
   text-align: center;
   padding: 0.5rem;
 }
 
 .icons {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: flex-end; */
+  /* align-items: center; */
 }
 .icons img {
   margin: 0.5rem;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 }
