--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ a:hover {
 
 .main-header {
   margin-bottom: 1rem;
-
   background-image: linear-gradient(
       to right,
       rgba(0, 0, 0, 1),
@@ -273,6 +272,37 @@ a:hover {
   to {
     width: 65%;
   }
+}
+/* Demo site */
+.demo-site {
+  margin-top: 2.5em;
+  padding: 1em;
+  text-align: center;
+  background-color: var(--line-color);
+  background-image: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url('img/landing3.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.demo-site h3 {
+  margin-bottom: 0.5rem;
+}
+.demo-site a {
+  font-family: 'Beth Ellen', cursive;
+  color: var(--primary-color);
+  font-size: 1.4em;
+}
+.demo-site-add-info {
+  display: none;
+}
+
+.demo-site-img img {
+  width: 200px;
+  height: auto;
 }
 
 /* Footer */
