--- a/style.css
+++ b/style.css
@@ -288,6 +288,7 @@ a:hover {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
 .demo-site h3 {
   margin-bottom: 0.5rem;
 }
@@ -303,6 +304,64 @@ a:hover {
 .demo-site-img img {
   width: 200px;
   height: auto;
+}
+/* Demo pics */
+.gr-design {
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.demo-pics {
+  height: 300px;
+  display: flex;
+  /* margin-top: 1rem; */
+}
+
+.panel {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 20px;
+  border: 2px solid var(--pimary-text-color);
+  height: 300px;
+  color: var(--primary-color);
+  cursor: pointer;
+  flex: 0.4;
+  margin: 1em;
+  position: relative;
+  opacity: 0.6;
+  transition: flex 0.7s ease-in;
+}
+
+.panel h4 {
+  font-size: 1.5rem;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  background-color: var(--line-color);
+  padding: 10px;
+  opacity: 0;
+}
+
+.panel.active {
+  flex: 3;
+}
+
+.panel.active h4 {
+  opacity: 1;
+}
+
+.panel.item1 {
+  background-image: url('img/terminatorT2.jpg');
+}
+.panel.item2 {
+  background-image: url('/img/bike3.jpg');
+}
+.panel.item3 {
+  background-image: url('img/totem.jpg');
+}
+.panel.item4 {
+  background-image: url('img/mousy1.jpg');
 }
 
 /* Footer */
