--- a/style.css
+++ b/style.css
@@ -413,3 +413,43 @@ a:hover {
   width: 25px;
   height: 25px;
 }
+
+@media (max-width: 768px) {
+  body {
+    font-size: 0.8rem;
+  }
+  .main-wrapper,
+  .experience,
+  .details,
+  .footer {
+    padding: 0;
+  }
+
+  .demo-site {
+    background-image: none;
+  }
+
+  .main-dates {
+    border: none;
+  }
+
+  .demo-pics {
+    flex-direction: column;
+    height: 400px;
+  }
+
+  .panel {
+    margin-bottom: 10px;
+  }
+  .panel h4 {
+    font-size: 0.8rem;
+  }
+
+  .skills-wrapper {
+    flex-direction: column;
+  }
+
+  .demo {
+    padding-bottom: 0.5em;
+  }
+}
