--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ a:hover {
 .main-dates {
   padding: 1em 3em;
   border-right: 2px solid var(--line-color);
+  flex: 0 1 40%;
 }
 
 .experience ul {
@@ -171,9 +172,9 @@ a:hover {
 .details {
   padding: 1em 3em;
   flex-grow: 1;
-  flex: 1, 1, 40%;
+  flex: 1 1 60%;
   text-align: center;
-  max-width: 800px;
+  /* max-width: 800px; */
 }
 
 .scale-item {
@@ -189,8 +190,8 @@ a:hover {
   width: 80%;
   height: 15px;
   border-radius: 0.4em;
-  background-color: var(--pimary-text-color);
   position: relative;
+  background-color: var(--line-color);
 }
 .scale-line--html::before {
   content: '';
@@ -199,7 +200,7 @@ a:hover {
   height: 15px;
   border-top-left-radius: 0.4em;
   border-bottom-left-radius: 0.4em;
-  background-color: var(--secondary-color);
+  background-color: var(--pimary-text-color);
   /* border-right: 2px solid var(--secondary-color); */
   top: 0;
   left: 0;
@@ -218,7 +219,7 @@ a:hover {
   width: 80%;
   height: 15px;
   border-radius: 0.4em;
-  background-color: var(--pimary-text-color);
+  background-color: var(--line-color);
   position: relative;
 }
 .scale-line--css::before {
@@ -228,7 +229,7 @@ a:hover {
   height: 15px;
   border-top-left-radius: 0.4em;
   border-bottom-left-radius: 0.4em;
-  background-color: var(--secondary-color);
+  background-color: var(--pimary-text-color);
   /* border-right: 2px solid var(--secondary-color); */
   top: 0;
   left: 0;
@@ -248,7 +249,7 @@ a:hover {
   width: 80%;
   height: 15px;
   border-radius: 0.4em;
-  background-color: var(--pimary-text-color);
+  background-color: var(--line-color);
   position: relative;
 }
 
@@ -259,7 +260,7 @@ a:hover {
   height: 15px;
   border-top-left-radius: 0.4em;
   border-bottom-left-radius: 0.4em;
-  background-color: var(--secondary-color);
+  background-color: var(--pimary-text-color);
   /* border-right: 2px solid var(--secondary-color); */
   top: 0;
   left: 0;
@@ -330,7 +331,7 @@ a:hover {
   margin: 1em;
   position: relative;
   opacity: 0.6;
-  transition: flex 0.7s ease-in;
+  transition: all 0.7s ease-in;
 }
 
 .panel h4 {
@@ -344,7 +345,8 @@ a:hover {
 }
 
 .panel.active {
-  flex: 3;
+  flex: 1.5;
+  opacity: 0.8;
 }
 
 .panel.active h4 {
@@ -414,15 +416,22 @@ a:hover {
   height: 25px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   body {
     font-size: 0.8rem;
   }
+}
+
+@media (max-width: 768px) {
   .main-wrapper,
   .experience,
   .details,
   .footer {
     padding: 0;
+  }
+
+  .experience {
+    flex-direction: column;
   }
 
   .demo-site {
@@ -431,11 +440,14 @@ a:hover {
 
   .main-dates {
     border: none;
+    flex-grow: 1;
   }
 
   .demo-pics {
     flex-direction: column;
-    height: 400px;
+    height: 500px;
+    max-width: 300px;
+    margin: 0 auto;
   }
 
   .panel {
