--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a:hover {
   width: 100%;
   height: 2px;
   /* padding: 5px; */
-  background-color: var(--primary-color);
+  background-color: var(--line-color);
   /* margin: 0.2rem 0; */
 }
 
@@ -142,9 +142,17 @@ a:hover {
   /* min-height: 80vh; */
 }
 .main-dates {
+  /* border: 2px solid var(--line-color); */
   padding: 1em 3em;
-  border-right: 2px solid var(--line-color);
+  /* border-right: 2px solid var(--line-color); */
   flex: 0 1 40%;
+  background-color: var(--line-color);
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0.94) 20%,
+    rgba(0, 0, 0, 0.6) 100%
+  );
 }
 
 .experience ul {
@@ -175,7 +183,6 @@ a:hover {
   flex-grow: 1;
   flex: 1 1 60%;
   text-align: center;
-  /* max-width: 800px; */
 }
 
 .scale-item {
@@ -282,11 +289,12 @@ a:hover {
   text-align: center;
   background-color: var(--line-color);
   background-image: linear-gradient(
-      to left,
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 0, 0.2)
-    ),
-    url('img/landing3.png');
+    to left,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0.2) 50%,
+    rgba(0, 0, 0, 1)
+  );
+
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -334,7 +342,7 @@ a:hover {
   flex: 0.4;
   margin: 1em;
   position: relative;
-  opacity: 0.5;
+  opacity: 0.6;
   transition: all 0.7s ease-in;
 }
 
@@ -376,10 +384,16 @@ a:hover {
 /* Footer */
 .footer {
   color: var(--pimary-text-color);
-  border: 2px solid var(--line-color);
+  /* border: 2px solid var(--line-color); */
   margin-top: 4rem;
   padding: 1.5rem;
   background-color: var(--line-color);
+  background-image: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 1),
+    rgba(0, 0, 0, 0.2) 50%,
+    rgba(0, 0, 0, 1)
+  );
 }
 
 .skills-wrapper {
@@ -402,7 +416,7 @@ a:hover {
 }
 
 .footer p {
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
   padding: 0.3rem;
 }
 
@@ -448,10 +462,6 @@ a:hover {
 
   .experience {
     flex-direction: column;
-  }
-
-  .demo-site {
-    background-image: none;
   }
 
   .main-dates {
