--- a/style.css
+++ b/style.css
@@ -383,6 +383,9 @@ a:hover {
 .panel.item4 {
   background-image: url('img/mousy1.jpg');
 }
+/* .panel.item5 {
+  background-image: url('img/Ps1.jpg');
+} */
 
 /* Footer */
 .footer {
