--- a/style.css
+++ b/style.css
@@ -536,5 +536,10 @@ a:hover {
   .demo h3 {
     letter-spacing: normal;
     font-size: 0.7rem;
+    padding-left: 0;
+  }
+  .skills-wrapper {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
