--- a/style.css
+++ b/style.css
@@ -566,4 +566,9 @@ a:hover {
     flex-direction: column;
     align-items: flex-start;
   }
+  .icons img {
+    /* margin-left: 0.5rem; */
+    width: 20px;
+    height: 20px;
+  }
 }
