--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ a:hover {
   height: auto;
 }
 /* Demo pics */
-.gr-design-wrapper {
+/* .gr-design-wrapper {
   margin-top: 4rem;
 }
 .gr-design {
@@ -353,7 +353,6 @@ a:hover {
 .demo-pics {
   height: 300px;
   display: flex;
-  /* margin-top: 1rem; */
 }
 
 .panel {
@@ -395,8 +394,8 @@ a:hover {
 .panel.active h4,
 .panel.active a {
   opacity: 1;
-}
-
+} */
+/* 
 .panel.item1 {
   background-image: url('img/terminatorT2.jpg');
 }
@@ -408,10 +407,80 @@ a:hover {
 }
 .panel.item4 {
   background-image: url('img/mousy1.jpg');
-}
+} */
 /* .panel.item5 {
   background-image: url('img/Ps1.jpg');
 } */
+
+.skills-wrapper {
+  margin-top: 2rem;
+  padding: 0 2rem;
+  color: var(--pimary-text-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.demo {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem;
+}
+
+.demo h3 {
+  font-size: 1.2rem;
+  padding: 0.5rem;
+}
+
+.icons {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.icon-stars-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 0.5em;
+  width: 250px;
+}
+.prog {
+  margin-right: auto;
+  padding-right: 0.5em;
+}
+.all-stars {
+  display: flex;
+}
+.icons img {
+  opacity: 0.8;
+  margin: 0.5rem;
+  width: 25px;
+  height: 25px;
+}
+
+.star {
+  background-color: var(--line-color);
+  margin-right: 0.2em;
+  width: 25px;
+  height: 25px;
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
+}
+
+.star.star-fill {
+  background-color: var(--pimary-text-color);
+}
 
 /* Footer */
 .footer {
@@ -428,51 +497,10 @@ a:hover {
   );
 }
 
-.skills-wrapper {
-  margin-top: 3rem;
-  padding: 2rem;
-  color: var(--pimary-text-color);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  /* justify-content: space-between; */
-  flex-wrap: wrap;
-  /* border: 2px solid var(--primary-color); */
-}
-/* 
-.demo:not(:first-child) {
-  margin-left: 2.5em;
-} */
-
-.demo {
-  display: flex;
-  align-items: center;
-  padding: 1rem;
-  /* width: 25rem; */
-  justify-content: center;
-}
-
 .footer p {
   /* color: var(--primary-color); */
   text-align: right;
   padding: 0.3rem;
-}
-
-.demo h3 {
-  /* font-family: 'Beth Ellen', cursive; */
-  letter-spacing: 5px;
-  /* font-size: 2rem; */
-  /* text-align: center; */
-  padding: 0 0.5rem;
-}
-
-.icons {
-  display: flex;
-}
-.icons img {
-  margin-left: 0.5rem;
-  width: 25px;
-  height: 25px;
 }
 
 @media (max-width: 1100px) {
