--- a/style.css
+++ b/style.css
@@ -498,8 +498,8 @@ a:hover {
 }
 
 .footer p {
-  /* color: var(--primary-color); */
-  text-align: right;
+  color: var(--primary-color);
+  text-align: center;
   padding: 0.3rem;
 }
 
