--- a/style.css
+++ b/style.css
@@ -464,6 +464,7 @@ a:hover {
   }
 
   .main-dates {
+    margin: 0 auto;
     border: none;
     flex-grow: 1;
   }
@@ -496,6 +497,10 @@ a:hover {
   .scale-line--html {
     width: 68%;
   }
+  .main-dates {
+    border: none;
+    flex-grow: 1;
+  }
 
   .scale-item {
     padding-top: 0.4em;
@@ -521,8 +526,9 @@ a:hover {
     padding-left: 0;
   }
   .skills-wrapper {
+    margin: 0 auto;
     flex-direction: column;
-    align-items: flex-start;
+    /* align-items: flex-start; */
   }
   .icons img {
     /* margin-left: 0.5rem; */
@@ -536,9 +542,12 @@ a:hover {
   }
 }
 
-@media (max-width: 200px) {
+@media (max-width: 220px) {
   .skills-wrapper {
     padding: 0 0.2rem;
+  }
+  .prog {
+    font-size: 0.8em;
   }
   .star {
     width: 12px;
