--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ a:hover {
 }
 
 .skills-wrapper {
-  margin-top: 3rem;
+  margin-top: 2rem;
   padding: 0 2rem;
   color: var(--pimary-text-color);
   display: flex;
@@ -442,9 +442,8 @@ a:hover {
 
 /* Footer */
 .footer {
-  color: var(--pimary-text-color);
   /* border: 2px solid var(--line-color); */
-  margin-top: 4rem;
+  margin-top: 2rem;
   padding: 1.5rem;
   background-color: var(--line-color);
   background-image: linear-gradient(
@@ -456,7 +455,7 @@ a:hover {
 }
 
 .footer p {
-  color: var(--pimary-text-color);
+  color: var(--primary-color);
   text-align: center;
   padding: 0.3rem;
 }
