--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ a:hover {
   color: var(--pimary-text-color);
   display: flex;
   flex-wrap: wrap;
-  /* min-height: 80vh; */
+  min-height: 80vh;
 }
 .main-dates {
   /* border: 2px solid var(--line-color); */
@@ -455,7 +455,6 @@ p.data {
 
 /* Footer */
 .footer {
-  /* border: 2px solid var(--line-color); */
   margin-top: 2rem;
   padding: 1.5rem;
   background-color: var(--line-color);
