--- a/style.css
+++ b/style.css
@@ -355,6 +355,10 @@ p.data {
   padding-left: 0.1rem;
 }
 
+.demo-site-item:first-child {
+  margin-bottom: 2.4em;
+}
+
 .skills-wrapper {
   margin: 3rem 0 2rem 0;
   padding: 0 2rem;
