--- a/hangman/style.css
+++ b/hangman/style.css
@@ -96,6 +96,10 @@ h1 {
   opacity: 0;
 }
 
+.keyboard {
+  display: none;
+}
+
 @media (max-width: 400px) {
   html {
     font: 0.6em;
@@ -109,5 +113,9 @@ h1 {
 
   .wrong-letters span {
     font-size: 1em;
+  }
+  .keyboard {
+    display: block;
+    opacity: 0;
   }
 }
