--- a/hangman/style.css
+++ b/hangman/style.css
@@ -97,7 +97,7 @@ h1 {
 }
 
 .keyboard {
-  display: none;
+  opacity: 0;
 }
 
 @media (max-width: 400px) {
@@ -115,7 +115,6 @@ h1 {
     font-size: 1em;
   }
   .keyboard {
-    display: block;
     opacity: 0;
   }
 }
