--- a/hangman/style.css
+++ b/hangman/style.css
@@ -99,7 +99,14 @@ h1 {
 .keyboard {
   opacity: 0;
 }
-
+@media (max-width: 1024px) {
+  .keyboard {
+    opacity: 1;
+  }
+  .keyboard :focus {
+    background-color: brown;
+  }
+}
 @media (max-width: 600px) {
   html {
     font: 0.6em;
@@ -113,11 +120,5 @@ h1 {
 
   .wrong-letters span {
     font-size: 1em;
-  }
-  .keyboard {
-    opacity: 1;
-  }
-  .keyboard :focus {
-    background-color: brown;
   }
 }
