--- a/hangman/style.css
+++ b/hangman/style.css
@@ -101,6 +101,11 @@ h1 {
 }
 
 @media (max-width: 1024px) {
+  .word {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .keyboard {
     opacity: 1;
     max-width: 100px;
