--- a/hangman/style.css
+++ b/hangman/style.css
@@ -8,6 +8,7 @@ body {
   background-color: #cecece;
   color: rgb(32, 19, 3);
 }
+
 h1 {
   text-align: center;
 }
@@ -31,8 +32,13 @@ h1 {
   min-width: 100px;
   max-width: 200px;
 }
-
+.guess {
+  margin: 0.2em;
+  padding: 0;
+  letter-spacing: 3px;
+}
 .wrong-letters {
+  width: 100px;
   padding: 2em;
   margin: 0 1em;
 }
@@ -41,11 +47,34 @@ h1 {
 }
 
 .word {
-  margin: 2em;
+  margin: 0.3em;
   font-weight: bold;
   font-size: 2em;
-  letter-spacing: 3px;
 }
+.word-container {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  flex-wrap: wrap;
+}
+
+.reload-word {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reload {
+  cursor: pointer;
+  padding: 0.2em 0.5em;
+  width: 40px;
+  height: auto;
+  transition: all 0.3s ease-in-out;
+}
+
+.reload:hover {
+  transform: scale(1.5);
+}
+
 .popup-container {
   position: fixed;
   top: 0;
@@ -106,6 +135,11 @@ h1 {
     flex-direction: column;
     align-items: center;
   }
+  .word-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .keyboard {
     opacity: 1;
     max-width: 100px;
@@ -136,6 +170,7 @@ h1 {
     min-width: 80px;
   }
   .wrong-letters {
+    width: 30px;
     padding: 0.2em 0;
     margin: 0;
   }
