--- a/hangman/style.css
+++ b/hangman/style.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 .reload:hover {
-  transform: scale(1.6);
+  transform: scale(1.3);
 }
 
 .popup-container {
@@ -140,6 +140,12 @@ h1 {
     flex-direction: column;
     align-items: center;
   }
+  .reload {
+    padding: 0;
+  }
+  .guess {
+    margin: 0.1em;
+  }
   .keyboard {
     opacity: 1;
     max-width: 100px;
@@ -172,6 +178,10 @@ h1 {
   .game-draw {
     max-width: 81px;
     min-width: 80px;
+  }
+  .reload {
+    width: 30px;
+    height: auto;
   }
   .wrong-letters {
     width: 30px;
