--- a/hangman/style.css
+++ b/hangman/style.css
@@ -71,9 +71,10 @@ h1 {
   transition: all 0.3s ease-in-out;
 }
 
-.reload:hover {
-  transform: scale(1.3);
-}
+/* .reload:hover,
+.reload:active {
+  transform: scale(1.2);
+} */
 
 .popup-container {
   position: fixed;
