--- a/hangman/style.css
+++ b/hangman/style.css
@@ -74,7 +74,7 @@ h1 {
   transform-origin: 50% 50%;
 } */
 .reload:hover #arrow {
-  transform: rotate(180deg);
+  transform: rotateZ(-180deg);
 }
 .reload:hover #text {
   transform: scale(1.1);
@@ -87,8 +87,9 @@ h1 {
 }
 
 #arrow {
+  fill: #817a7a;
   transform-origin: 50% 50%;
-  transform: rotate(0deg);
+  /* transform: rotate(0deg); */
   transition: all 1s ease-in-out;
 }
 
