--- a/hangman/style.css
+++ b/hangman/style.css
@@ -87,7 +87,7 @@ h1 {
 }
 
 #arrow {
-  fill: #817a7a;
+  fill: #a08484;
   transform-origin: 50% 50%;
   /* transform: rotate(0deg); */
   transition: all 1s ease-in-out;
