--- a/hangman/style.css
+++ b/hangman/style.css
@@ -74,7 +74,7 @@ h1 {
   transform-origin: 50% 50%;
 } */
 .reload:hover #arrow {
-  transform: rotateZ(180deg);
+  transform: rotate(360deg);
   fill: #2b1100;
 }
 .reload:hover #text {
@@ -90,9 +90,11 @@ h1 {
 }
 
 #arrow {
+  /* transform: rotate(100deg); */
+  display: block;
   fill: #a08484;
+  transform-box: fill-box;
   transform-origin: 50% 50%;
-  /* transform: rotate(0deg); */
   transition: all 1s ease-in-out;
 }
 
