--- a/style.css
+++ b/style.css
@@ -355,8 +355,11 @@ p.data {
   padding-left: 0.1rem;
 }
 
-.demo-site-item:first-child {
-  margin-bottom: 2.4em;
+.demo-site-item {
+  margin-bottom: 2em;
+}
+.demo-site-item:nth-child(3) {
+  margin-bottom: 0.1em;
 }
 
 .skills-wrapper {
