--- a/puzzle/style.css
+++ b/puzzle/style.css
@@ -15,7 +15,9 @@
 .puzzle-piece {
   width: 100px;
   height: 100px;
-
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,6 +29,7 @@
 .winner {
   opacity: 0;
   text-align: center;
+  color: rgb(1, 75, 1);
 }
 
 .play {
