--- a/memo/style.css
+++ b/memo/style.css
@@ -46,7 +46,7 @@ body {
 .card-container {
   max-width: 610px;
   min-width: 275px;
-  /* background-color: darkgrey; */
+  justify-content: center;
   display: grid;
   grid-template-columns: repeat(auto-fill, 130px);
   justify-items: center;
@@ -107,4 +107,38 @@ body {
   background-color: #fff;
   color: rgb(1, 75, 1);
   cursor: pointer;
+}
+@media (max-width: 500px) {
+  .wrapper {
+    padding: 0.5em;
+  }
+  .card-container {
+    max-width: 400px;
+    grid-template-columns: repeat(auto-fill, 100px);
+    gap: 3px;
+  }
+  .card,
+  .card-front,
+  .card-back {
+    width: 100px;
+    height: 70px;
+  }
+}
+
+@media (max-width: 370px) {
+  .wrapper {
+    padding: 0;
+  }
+  .card-container {
+    min-width: 200px;
+    grid-template-columns: repeat(auto-fill, 90px);
+    gap: 1px;
+  }
+  .card,
+  .card-front,
+  .card-back {
+    /* background-position: center; */
+    width: 90px;
+    height: 70px;
+  }
 }
