--- a/memo/style.css
+++ b/memo/style.css
@@ -9,7 +9,7 @@ html {
   padding: 0;
 }
 body {
-  background-color: #090a2f;
+  background-color: #000;
 }
 .wrapper {
   padding: 2em;
@@ -76,7 +76,7 @@ body {
 }
 
 .card-front {
-  background-color: rgb(37, 66, 7);
+  background-color: rgb(1 75 1);
 }
 .card.flipped {
   transform: rotateY(-180deg);
