--- a/style.css
+++ b/style.css
@@ -358,6 +358,18 @@ p.data {
 .demo-site-item {
   margin-bottom: 2em;
 }
+.demo-site-item-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.demo-site-item-links a {
+  margin: 0 0.5em;
+  display: block;
+}
+/* .demo-site-item:first-child a {
+  display: block;
+} */
 .demo-site-item:nth-child(3) {
   margin-bottom: 0.1em;
 }
@@ -591,6 +603,12 @@ p.data {
   .star {
     width: 14px;
     height: 14px;
+  }
+  .demo-site-item-links {
+    flex-direction: column;
+  }
+  .demo-site-item-links a {
+    margin: 0.3em 0;
   }
 }
 
