--- a/memo/style.css
+++ b/memo/style.css
@@ -19,6 +19,13 @@ body {
   position: relative;
 }
 
+.timer {
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
 .game-over {
   display: none;
   position: absolute;
