--- a/mogo/css/examples.css
+++ b/mogo/css/examples.css
@@ -1,3 +1,6 @@
+.examles .heading-sub {
+  margin-bottom: 23px;
+}
 .examples-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
