--- a/mogo/css/header.css
+++ b/mogo/css/header.css
@@ -120,7 +120,7 @@ a {
 .main-info {
   text-align: center;
   position: absolute;
-  top: 48%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -156,11 +156,16 @@ a {
 }
 
 .sub-title {
-  /* padding-bottom: 0.2em; */
   font-family: 'Kaushan Script', cursive;
-  font-weight: 200;
-  font-size: 3.5em;
-  letter-spacing: 3px;
+  font-weight: normal;
+  font-size: 72px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
 }
 .button-container {
   margin-top: 3.5em;
