--- a/mogo/css/map.css
+++ b/mogo/css/map.css
@@ -19,6 +19,7 @@
 }
 
 .map-content {
+  height: 86px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -27,15 +28,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 .map-content i,
 .map-content a {
   color: var(--blush);
-  /* display: block; */
+  margin: 0;
+  padding: 0;
 }
 .map-content i {
-  margin-bottom: 20px;
+  font-size: 20px;
+  margin-bottom: 18px;
 }
 
 .map-heading {
@@ -47,15 +50,12 @@
   text-align: center;
   color: var(--blush);
   text-transform: uppercase;
+  line-height: 1;
 }
 
-.map-heading::after {
-  content: '';
+.map-delimiter {
   width: 60px;
   height: 3px;
   background-color: var(--blush);
-  position: absolute;
-  bottom: -20px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-top: 21px;
 }
