--- a/mogo/css/unique.css
+++ b/mogo/css/unique.css
@@ -16,6 +16,9 @@
   background: rgba(255, 255, 255, 0.85);
   z-index: 1;
 }
+.unique .heading-story::after {
+  bottom: -38px;
+}
 .unique-wrapper {
   width: 100%;
   height: 100%;
@@ -55,7 +58,7 @@
   background: url('../assets/white.png');
   width: 274px;
   height: 476px;
-  top: 34%;
+  top: 33%;
   left: 105%;
   transform: translateX(-50%);
   z-index: 3;
