--- a/mogo/css/what.css
+++ b/mogo/css/what.css
@@ -1,10 +1,15 @@
+.what .heading-sub {
+  margin-bottom: 23px;
+}
+
 .what-carousel {
   margin: 0 auto;
   display: flex;
-  margin-top: 90px;
+  margin-top: 92px;
 }
 .about-text.what-p {
   margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .what-carousel-img-container {
@@ -27,7 +32,6 @@
 .what-carousel-accordion {
   width: 600px;
   height: 400px;
-  /* background-color: yellow; */
 }
 
 .what-accordion-header {
