--- a/mogo/style.css
+++ b/mogo/style.css
@@ -21,9 +21,11 @@
 }
 .work,
 .unique-content,
-.examples,
 .happy-inner {
   padding-top: 109px;
+}
+.examples {
+  padding-top: 110px;
 }
 .what,
 .blog-inner {
@@ -50,11 +52,12 @@
 .heading-sub {
   color: #333333;
   font-weight: 400;
-  padding: 0;
   font-family: 'Kaushan Script', cursive;
   font-size: 24px;
   text-align: center;
-  padding-bottom: 22px;
+  padding: 0;
+  line-height: normal;
+  margin-bottom: 22px;
 }
 
 .heading-story {
