--- a/mogo/css/media/header-media.css
+++ b/mogo/css/media/header-media.css
@@ -1,6 +1,6 @@
 @media (max-width: 1250px) {
   .header {
-    height: 100vh;
+    height: 500px;
   }
   .main-menu {
     display: block;
@@ -10,19 +10,20 @@
     padding: 1em;
   }
   .main-heading {
-    font-size: 4em;
-    margin-top: 30px;
-    margin-bottom: 100px;
+    font-size: 2em;
+    margin-bottom: 20px;
   }
+
   .main-heading::after {
-    bottom: -46px;
+    bottom: -20px;
   }
   .sub-title {
     font-size: 1.5em;
+    margin-bottom: 20px;
   }
   .menus-wrapper {
     position: absolute;
-    top: 80px;
+    top: 76px;
     left: 16px;
   }
 
@@ -32,13 +33,29 @@
     opacity: 0.9;
     background-color: var(--blush);
   }
+
   .main-menu li {
     font-size: 16px;
     margin: 16px 0;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
+  .header {
+    height: 340px;
+  }
+  .main-heading {
+    font-size: 1.8em;
+    margin-bottom: 10px;
+  }
+  .sub-title {
+    margin-bottom: 10px;
+    font-size: 0.8em;
+  }
+
+  .nav-container {
+    margin-top: 8px;
+  }
   .main-menu {
     visibility: hidden;
     opacity: 0;
@@ -59,20 +76,13 @@
     transform: scaleY(0);
     transform: translateY(-100px);
   }
+  .menus-wrapper {
+    position: absolute;
+    top: 20px;
+    left: 110px;
+  }
   .burger-menu {
     display: block;
-  }
-
-  .main-heading {
-    font-size: 1.8em;
-    margin-top: 20px;
-    margin-bottom: 80px;
-  }
-  .main-heading::after {
-    bottom: -38px;
-  }
-  .sub-title {
-    font-size: 1em;
   }
 
   .shopping-card {
@@ -90,11 +100,19 @@
     font-size: 10px;
   }
   button.header-button {
-    font-size: 10px;
+    padding: 5px 0.5rem;
+    font-size: 9px;
   }
-  .sub-title {
-    font-size: 0.8em;
-    letter-spacing: 2px;
+
+  .button-container {
+    margin-top: 2.5em;
+  }
+  .carousel-container {
+    height: 30px;
+  }
+  .main-nav ul li {
+    margin-right: 1.6em;
+    font-size: 12px;
   }
 }
 @media (max-width: 350px) {
@@ -103,7 +121,6 @@
   }
   .sub-title {
     font-size: 0.8em;
-    letter-spacing: 1px;
   }
 }
 @media (max-width: 300px) {
